--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.projeto2_desktop/com.example.projeto2_desktop.HelloApplication
+                            <mainClass>com.example.projeto2_desktop/com.example.projeto2_desktop.App
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
